--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="./src/assets/images/logo.png" type="image/x-icon">
+  <link class="favicon" rel="shortcut icon" href="./src/assets/images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="./src/App.css">
   
 
   <title>Collab Nation</title>
+  <style>
+    .favicon{
+      height: 2rem;
+      width: 2rem;
+    }
+  </style>
 </head>
 
 <body>
